tests/RV64M/invalid/src/002-invalid3.s
# Invalid instruction placeholder 3
.text

.global _start

_start:
